syntax = "proto3";

option go_package = "./;edocontroller";
package edocontroller;

service EdoService {
  rpc AddDevice (AddDeviceRequest) returns (AddDeviceResponse) {}
  rpc GetDevices (GetDevicesRequest) returns (GetDevicesResponse) {}
  rpc Controller (ControlleRequest) returns (ControlleResponse) {}
  rpc ExController (stream ExControllerResponse) returns (stream ExControllerRequest) {}
}

message GetDevicesRequest {

}

message GetDevicesResponse {

}

message AddDeviceRequest {
  string deviceId = 1;
}

message AddDeviceResponse {
  bool result = 1;
}

message ControlleRequest {
  string command = 1;
}

message ControlleResponse {
  string result = 1;
}

message ExControllerRequest {
  string command = 1;
}

message ExControllerResponse {
  string result = 1;
}